@@ -59,7 +59,9 @@
     To enter scroll mode, type 'page up' when in GDB mode and to exit
     type 'q', 'i' or 'Enter'. In scroll mode, you can scroll through
     the GDB output. You can also search the GDB output with the /, ?, n
-    and N keys.
+    and N keys. Marks are also supported. You can set a mark by typing
+    m[a-z] and you can jump to a mark by typing '[a-z]. See the
+    documentation for more details.
 
   * Extended support for the G command when in CGDB mode. The new supported
     syntax is [<number>]G, allowing users to jump to a specific line within
